	2017-11-19 Igor Tyukalov <tyukalov@bk.ru>

	* Полностью пересмотрен интерфейс. Теперь функция argparse вызывается
	с единственным аргументом - структурой ARGPARSE_ARG, а возвращает
	структуру OPTARG. Подробность см. в документации (на данный момент
	отсутствует) или в исходниках.