@@ -4,3 +4,8 @@
 	с единственным аргументом - структурой ARGPARSE_ARG, а возвращает
 	структуру OPTARG. Подробность см. в документации (на данный момент
 	отсутствует) или в исходниках.
+
+	2017-11-22 Igor Tyukalov <tyukalov@bk.ru>
+	* Реализованы три флага параметров для опций - отсутствующий (NONE),
+	обязательный (REQUIRED)  и необязательный (OPTIONAL).
+	* Исправлены различные ошибки
